test/error/LambdaUnexpected.fu
public static class Test
{
	public static bool Run()
	{
		x => x + 1; //ERROR: Useless expression
		return true;
	}
}
